update trace analysis

--- a/slcore/cmdconfigs/builtin.cmd.yaml
+++ b/slcore/cmdconfigs/builtin.cmd.yaml
@@ -14,7 +14,9 @@ bricks:
                 in your current project(./samander batch -s). If there is
                 no valid image and there is no image in your project,
                 you must provide a image."}
-        trace: {short: t, help: "Path to the trace of format uuid-arch-endian.trace"}
+        trace: &trace
+            short: t
+            help: "Path to the trace of format uuid-arch-endian.trace"
     callback: bricksanalysis
 asmsrc:
     help: "Run - Online assembling for the image produced by compiling
@@ -27,12 +29,13 @@ asmany:
         <<: *optional
         url: {short: l, required: False, help: "will be removed in the future"}
     callback: asmany
-rendering:
-    help: "Run - Standalone: Rendering QEMU machine with given device tree source."
+synthesis:
+    help: "Run - Standalone: Rendering QEMU machine with bricks."
     optional:
         dtb: *dtb
     callback: rendering
 trace:
     help: "Run - Standalone: QEMU trace analysis."
-    optional: *optional
+    optional:
+        trace: *trace
     callback: trace
