update offline brick analysis

--- a/slcore/aconfigs/builtin.a.yaml
+++ b/slcore/aconfigs/builtin.a.yaml
@@ -3,7 +3,8 @@ asmany:
         Tracing, CheckUserLevelF]
     description: ''
 bricksanalysis:
-    analyses: [CheckBoard, CalcLoadAddr, EntryPoint]
+    analyses: [CheckBoard, CalcLoadAddr, EntryPoint, CToLLVM,
+        PartiallyLink, SymVExe, SVEPostProcess]
     save_and_restore: True
     description: ''
 trace:
