--- a/slcore/database/qemu.intc.yaml
+++ b/slcore/database/qemu.intc.yaml
@@ -11,7 +11,7 @@ arm,arm11mp-gic:
   buddy_compatible: ['arm,arm11mp-twd-timer', mpcore_wdt]
   get_body: ['object_initialize(&s->{{ name }}, sizeof(s->{{ name }}), TYPE_ARM11MPCORE_PRIV);',
     'object_property_set_bool(OBJECT(&s->{{ name }}), true, "realized", &err);', 'sysbus_mmio_map(SYS_BUS_DEVICE(&s->{{
-      name }}), 0, {{ reg.base }} & 0xffff0000);']
+      name }}), 0, {{ reg.base|to_hex }} & 0xffff0000);']
   get_connection: ['sysbus_connect_irq(SYS_BUS_DEVICE(&s->{{ name }}), 0, {{ intcp.get_irqn
       }});']
   get_field: ['ARM11MPCorePriveState {{ name }};']
@@ -28,7 +28,7 @@ arm,cortex-a9-gic:
   get_body: ['object_initialize(&s->{{ name }}, sizeof(s->{{ name }}), TYPE_A9MPCORE_PRIV);',
     'qdev_prop_set_uint32(DEVICE(&s->arm_cortex_a9_gic), "num-cpu", 2);', 'object_property_set_bool(OBJECT(&s->{{
       name }}), true, "realized", &err);', 'sysbus_mmio_map(SYS_BUS_DEVICE(&s->{{
-      name }}), 0, {{ reg.base }} & 0xffff0000);']
+      name }}), 0, {{ reg.base|to_hex }} & 0xffff0000);']
   get_connection: ['sysbus_connect_irq(SYS_BUS_DEVICE(&s->{{ name }}), 0, {{ intcp.get_irqn
       }});']
   get_field: ['A9MPPrivState {{ name }};']
@@ -87,17 +87,17 @@ ingenic,jz4775-intc: {extend: 'intc,generic'}
 ingenic,jz4780-intc: {extend: 'intc,generic'}
 intc,generic:
   get_body: ['object_initialize(&s->{{ name }}{{ id }}, sizeof(s->{{ name }}{{ id
-      }}), TYPE_{{ name|upper }});', 'qdev_set_parent_bus(DEVICE(&s->{{ name }}{{
+      }}), TYPE_{{ name|to_upper }});', 'qdev_set_parent_bus(DEVICE(&s->{{ name }}{{
       id }}), sysbus_get_default());', 'object_property_set_bool(OBJECT(&s->{{ name
       }}{{ id }}), true, "realized", &err);', 'sysbus_mmio_map(SYS_BUS_DEVICE(&s->{{
-      name }}{{ id }}), 0, {{ reg.base }});']
+      name }}{{ id }}), 0, {{ reg.base|to_hex }});']
   get_connection: ['qdev_connect_gpio_out(DEVICE(&s->{{ name }}{{ id }}), 0, {{ intcp.get_irqn
       }});']
-  get_field: ['{{ name|upper }}State {{ name }}{{ id }};']
+  get_field: ['{{ name|to_upper }}State {{ name }}{{ id }};']
   get_header: ['hw/intc/{{ name }}.h']
   get_irqn: qdev_get_gpio_in(DEVICE(&s->{{ intcp.name }}{{ iid }}), {{ irqn }})
   n_irq: 32
-  parameters: [name, regs, intcp]
+  parameters: [name, regs, intcp, irqns]
 intel,i8259: {extend: 'intc,generic'}
 jcore,aic1: {extend: 'intc,generic'}
 jcore,aic2: {extend: 'intc,generic'}
