--- a/slcore/database/qemu.timer.yaml
+++ b/slcore/database/qemu.timer.yaml
@@ -99,11 +99,11 @@ qcom,scss-timer: {extend: 'timer,generic'}
 ralink,cevt-systick: {extend: 'timer,generic'}
 ralink,rt2880-timer:
   external: true
-  get_body: ['object_initialize(&s->timer{{ id }}, sizeof(s->timer{{ id }}), TYPE_{{ name|upper }});',
+  get_body: ['object_initialize(&s->timer{{ id }}, sizeof(s->timer{{ id }}), TYPE_{{ name|to_upper }});',
     'qdev_set_parent_bus(DEVICE(&s->timer{{ id }}), sysbus_get_default());', 'object_property_set_bool(OBJECT(&s->timer{{ id }}),
       true, "realized", &err);', 'sysbus_mmio_map(SYS_BUS_DEVICE(&s->timer{{ id }}), 0, {{
-      reg.base }});']
-  get_field: ['{{ name|upper }}State timer{{ id }};']
+      reg.base|to_hex }});']
+  get_field: ['{{ name|to_upper }}State timer{{ id }};']
   get_header: ['hw/timer/{{ name }}.h']
   # get_connection: ['qdev_connect_gpio_out(DEVICE(&s->timer{{ id }}), {{ siid }}, {{ intcp.get_irqn }});']
   get_connection: []
@@ -149,12 +149,12 @@ timer,generic:
   external: true
   n_irq: 1
   counters: []
-  get_body: ['object_initialize(&s->timer{{ id }}, sizeof(s->timer{{ id }}), TYPE_{{ name|upper }});',
+  get_body: ['object_initialize(&s->timer{{ id }}, sizeof(s->timer{{ id }}), TYPE_{{ name|to_upper }});',
     'qdev_set_parent_bus(DEVICE(&s->timer{{ id }}), sysbus_get_default());', 'object_property_set_bool(OBJECT(&s->timer{{ id }}),
       true, "realized", &err);', 'sysbus_mmio_map(SYS_BUS_DEVICE(&s->timer{{ id }}), 0, {{
-      reg.base }});']
+      reg.base|to_hex }});']
   get_connection: ['qdev_connect_gpio_out(DEVICE(&s->timer{{ id }}), {{ siid }}, {{ intcp.get_irqn }});']
-  get_field: ['{{ name|upper }}State timer{{ id }};']
+  get_field: ['{{ name|to_upper }}State timer{{ id }};']
   get_header: ['hw/timer/{{ name }}.h']
   parameters: [intcp, irqns]
 via,vt8500-timer: {extend: 'timer,generic'}
