--- a/slcore/aconfigs/builtin.a.yaml
+++ b/slcore/aconfigs/builtin.a.yaml
@@ -17,5 +17,5 @@ asmsrc:
         CheckUndefInst, CheckTLBExcep]
     description: ''
 rendering:
-    analyses: [Preparation, DTPreprocessing]
+    analyses: [SynthesisDT, DTPreprocessing]
     description: ''
