--- a/slcore/cmdconfigs/builtin.cmd.yaml
+++ b/slcore/cmdconfigs/builtin.cmd.yaml
@@ -1,5 +1,6 @@
-bricks:
-    help: "Run - Offline bricks analysis."
+diagnose:
+    help: "Run - Online assembling for the image produced by compiling
+        the OS source. Debug interface will be exposed if the validation fails."
     optional: &optional
         dtb: &dtb
             short: dtb
@@ -16,25 +17,20 @@ bricks:
         trace: &trace
             short: t
             help: "Path to the trace of format uuid-arch-endian.trace"
-    callback: bricksanalysis
-asmsrc:
-    help: "Run - Online assembling for the image produced by compiling
-        the OS source. Debug interface will be exposed if the validation fails."
-    optional: *optional
-    callback: asmsrc
-asmany:
+    callback: diagnosis
+upload:
     help: "Run - Online assembling for any image. No debug interfaces."
     optional:
         <<: *optional
         url: {short: l, required: False, help: "will be removed in the future"}
-    callback: asmany
-synthesis:
-    help: "Run - Standalone: Rendering QEMU machine with bricks."
+    callback: uploading
+synthesize:
+    help: "Standalone - QEMU machine rendering with bricks."
     optional:
         dtb: *dtb
-    callback: rendering
-trace:
-    help: "Run - Standalone: QEMU trace analysis."
+    callback: synthesis
+coverup:
+    help: "Standalone - QEMU trace analysis."
     optional:
         trace: *trace
-    callback: trace
+    callback: coveruptrace
